--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -8,7 +8,7 @@
     <form action="" method="POST">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <input type="submit" class="btn btn-default" value="Login">
+        <input type="submit" class="btn btn-default" value="Sign Up">
     </form>
 </div>
 
