--- a/posts/templates/posts/_post.html
+++ b/posts/templates/posts/_post.html
@@ -7,7 +7,7 @@
                 <a href="{% url 'posts:for_user' username=post.user.username %}">@{{post.user.username}}</a>
             </span>
             <time class="time">
-                <a href="{% url 'posts:single': username=post.user.username pk=post.pk %}">{{post.created_at}}</a>
+                <a href="{% url 'posts:single' username=post.user.username pk=post.pk %}">{{post.created_at}}</a>
             </time>
         </h5>
 
